<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".TambahPertanyaan">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"

            tools:ignore="MissingConstraints">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="#2BA5C4"
                android:gravity="center"
                android:orientation="horizontal"

                >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/tambah_pertanyaan"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="8"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/black"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@drawable/rounded_edge"
                    android:gravity="center"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editTextTextPersonName"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:ems="10"
                        android:gravity="top"
                        android:inputType="textMultiLine"
                        android:lines="5"
                        android:padding="10dp"
                        android:singleLine="false"
                        android:text=""
                        android:textSize="16sp"
                        android:hint="@string/tulis_pertanyaan"
                        tools:ignore="LabelFor"
                        android:autofillHints="" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-60dp">

                    </Spinner>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="8"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:gravity="right"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded">

                <Button
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:backgroundTint="#C0C0C0"
                    android:text="@string/upload_pertanyaanmu"
                    android:textSize="14sp"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:cornerRadius="15dp"
                    >

                </Button>

            </LinearLayout>

        </LinearLayout>
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:menu="@menu/my_navigation_items"
            android:layout_gravity="bottom"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>